Cleanup of centos kickstart file

--- a/packer/kvm/kickstart/centos7-ks.cfg
+++ b/packer/kvm/kickstart/centos7-ks.cfg
@@ -65,12 +65,12 @@ user --groups=wheel --name=jbrink --password=password123 --gecos="James Brink"
 #
 ###############################################################
 
-#  selinux --enforcing
- selinux --permissive
- #selinux --disabled
+selinux --enforcing
+# selinux --permissive
+# selinux --disabled
  
 # firewall --enabled --http --ssh --ftp --port=https:tcp --port=ipp:tcp
-firewall --disabled
+# firewall --disabled
 
  
 ###############################################################
@@ -82,8 +82,8 @@ firewall --disabled
 %packages --nobase --ignoremissing --excludedocs
 @core
 @base
-vim 
 bash-completion
+firewalld
 net-tools
 
 -fprintd-pam
@@ -91,6 +91,7 @@ net-tools
 
 # Microcode updates cannot work in a VM
 -microcode_ctl
+
 # unnecessary firmware
 -aic94xx-firmware
 -alsa-firmware
@@ -109,30 +110,32 @@ net-tools
 -rt73usb-firmware
 -xorg-x11-drv-ati-firmware
 -zd1211-firmware
+
 # Don't build rescue initramfs
 -dracut-config-rescue
 %end
 
-# openssh-server
-# openssh-clients
-
 %post
-# configure wheel user in sudoers
+# Configure wheel user in sudoers
 echo "%wheel ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers.d/wheel
 chmod 0440 /etc/sudoers.d/wheel
 cp /etc/sudoers /etc/sudoers.orig
 sed -i "s/^\(.*requiretty\)$/#\1/" /etc/sudoers
+
 # Update all packages
 yum update -y
+
 # Install FreeIPA
-# firewall-cmd --add-service=freeipa-ldap --add-service=freeipa-ldap
-# firewall-cmd --add-service=freeipa-ldap --add-service=freeipa-ldap --permanent
-# firewall-cmd --permanent --add-service=ssh
+firewall-cmd --add-service=freeipa-ldap --add-service=freeipa-ldap
+firewall-cmd --add-service=freeipa-ldap --add-service=freeipa-ldap --permanent
 yum -y install freeipa-server ipa-server-dns
-# --realm=EXAMPLE.TEST
-# --ds-password=The-directory-server-password
-# --admin-password=The-admin-password
+
+# Install Additional packages
+yum -y vim
+
+# Additional setup
+firewall-cmd --permanent --add-service=ssh
 systemctl enable sshd
-# systemctl enable firewalld
+systemctl enable firewalld
 systemctl enable serial-getty@ttyS0.service
 %end
