Modernize project with Nix flake and AlmaLinux 10 support
- Add flake.nix with cross-platform devShells (macOS/Linux)
- Add modern HCL2 packer template for AlmaLinux 10.1
- Add justfile with VM build/run commands
- Update README with new workflow

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,27 @@
+# ISO files
 *.iso
+iso/
+
+# Disk images
 *.qcow2
-alpine
-packer_cache
-packer/kvm/output/*
+*.raw
+
+# Alpine netboot extracted files
+alpine/
+
+# Packer cache and output
+packer_cache/
+.packer_cache/
+packer/*/output/
+
+# Nix
+result
+.direnv/
+
+# Editor
+.idea/
+*.swp
+*~
+
+# OS
+.DS_Store
