Add aarch64 support and reorganize packer configs
- Reorganize packer configs into arch subdirectories (x86_64, aarch64)
- Add aarch64 AlmaLinux 10 packer template for Apple Silicon HVF
- Add OEMDRV CD approach for kickstart delivery on aarch64
- Update kickstart files to use cmdline mode for automation
- Add VNC password support and hclfmt to justfile
- Add shell completions for just in flake devShell
- Document VNC boot command limitations on aarch64/HVF

Note: aarch64 builds on macOS HVF have VNC boot command issues.
For reliable aarch64 builds, use Linux ARM with KVM or Lima.

--- a/packer/almalinux10/aarch64/http/ks.cfg
+++ b/packer/almalinux10/aarch64/http/ks.cfg
@@ -1,12 +1,12 @@
-# AlmaLinux 10 Kickstart Configuration
+# AlmaLinux 10 aarch64 Kickstart Configuration
 # Minimal server installation for Packer builds
 
-# Installation mode
-text
+# Installation mode - cmdline for fully automated install
+cmdline
 eula --agreed
 
 # Use network installation
-url --url="https://repo.almalinux.org/almalinux/10.1/BaseOS/x86_64/os/"
+url --url="https://repo.almalinux.org/almalinux/10.1/BaseOS/aarch64/os/"
 
 # Keyboard and language
 keyboard --xlayouts='us'
@@ -36,8 +36,8 @@ ignoredisk --only-use=vda
 clearpart --all --initlabel --drives=vda
 autopart --type=lvm --nohome
 
-# Bootloader
-bootloader --append="console=tty0 console=ttyS0,115200n8" --location=mbr --boot-drive=vda
+# Bootloader (aarch64 uses ttyAMA0 for serial)
+bootloader --append="console=tty0 console=ttyAMA0,115200n8" --location=mbr --boot-drive=vda
 
 # Don't run the Setup Agent on first boot
 firstboot --disabled
@@ -62,18 +62,13 @@ qemu-guest-agent
 NetworkManager
 openssh-server
 openssh-clients
-# Exclude unnecessary firmware
--iwl*
--ivtv*
--aic*
--alsa*
 %end
 
 # Post-installation script
 %post --log=/root/ks-post.log
 
-# Enable serial console
-systemctl enable serial-getty@ttyS0.service
+# Enable serial console (aarch64 uses ttyAMA0)
+systemctl enable serial-getty@ttyAMA0.service
 
 # Enable QEMU guest agent
 systemctl enable qemu-guest-agent
